# dotask-cli

./: README.md  pyproject.toml
dotask/: __main__.py  cli.py  dotask.py
tests/: test_cli.py  test_dotask.py
