[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dotask-cli"
version = "0.1.0"
authors = [
    {name = "Bartosz Kucharz", email = "bartosz_kucharz@outlook.com"}
]
description = "A command-line task manager"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.scripts]
dotask = "dotask.cli:main"
